Added cache, added 'What's new' thumbnails, added support for live page of channels