@@ -23,49 +23,42 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
 public final class TwitchChannelClipExtractor extends ChannelTabExtractor {
 
+    private final Map<String, StreamInfoItem> cache;
     private TwitchClipResponseInner[] response;
 
-    public TwitchChannelClipExtractor(@Nonnull StreamingService service, @Nonnull ListLinkHandler linkHandler) {
+    public TwitchChannelClipExtractor(final StreamingService service, final ListLinkHandler linkHandler, final Map<String, StreamInfoItem> cache) {
         super(service, linkHandler);
+        this.cache = cache;
     }
 
     @Nonnull
     @Override
     public InfoItemsPage<InfoItem> getInitialPage() throws IOException, ExtractionException {
         return new InfoItemsPage<>(Arrays.stream(response).map(res -> {
-                    final var item = new StreamInfoItem(
-                            getServiceId(),
-                            new TwitchClipId(res.getClipId()).toString(),
-                            res.getClipTitle(),
-                            StreamType.NONE
-                    );
-                    item.setThumbnails(List.of(new Image(
-                            res.getVodThumbnailUrl(),
-                            Image.HEIGHT_UNKNOWN,
-                            Image.WIDTH_UNKNOWN,
-                            Image.ResolutionLevel.UNKNOWN
-                    )));
-                    try {
-                        item.setUploaderName(getId() + " + " + res.getClipperName());
-                    } catch (ParsingException e) {
-                        item.setUploaderName("");
-                    }
-                    item.setDuration(res.getClipLength());
-                    item.setViewCount(res.getClipViewerCount());
-                    item.setShortDescription("(" + res.getClipperName() + "), " + res.getGameName());
-                    try {
-                        item.setUploadDate(DateWrapper.fromInstant(res.getUploadDateTimeString()));
-                    } catch (ParsingException ignored) {
-                    }
-                    return item;
-                }
-        ).collect(Collectors.toList()), null, Collections.emptyList());
+            final var item = new StreamInfoItem(getServiceId(), new TwitchClipId(res.getClipId()).toString(), res.getClipTitle(), StreamType.NONE);
+            item.setThumbnails(List.of(new Image(res.getVodThumbnailUrl(), Image.HEIGHT_UNKNOWN, Image.WIDTH_UNKNOWN, Image.ResolutionLevel.UNKNOWN)));
+            try {
+                item.setUploaderName(getId() + " + " + res.getClipperName());
+            } catch (ParsingException e) {
+                item.setUploaderName("");
+            }
+            item.setDuration(res.getClipLength());
+            item.setViewCount(res.getClipViewerCount());
+            item.setShortDescription("(" + res.getClipperName() + "), " + res.getGameName());
+            try {
+                item.setUploadDate(DateWrapper.fromInstant(res.getUploadDateTimeString()));
+            } catch (ParsingException ignored) {
+            }
+            cache.put(new TwitchClipId(res.getClipId()).toString(), item);
+            return item;
+        }).collect(Collectors.toList()), null, Collections.emptyList());
     }
 
     @Override
